--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="home-txt">
             <span>Hello, I'm</span>
-            <h1>Prasun Singh Verma</h1>
+            <h1>S S Rajiv Nayan</h1>
             <h2>Frontend Developer</h2>
             <p>As a dedicated and motivated computer science student, I am eager to kick-start my career as a frontend developer. I am currently pursuing a Bachelor's degree in Computer Science at Acharya Institute Of Technology, with a strong foundation in programming concepts and a passion for creating visually stunning and user-friendly websites. I am seeking an internship or entry-level position in frontend development where I can apply my knowledge of HTML, CSS, and JavaScript to contribute to innovative web projects, learn from experienced professionals, and grow as a frontend developer."</p>
         </div>
